# webuiboot

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  build.rs  x86_64-unknown-uefi-debug.json
.cargo/: config.toml
src/: boot.rs  executor.rs  futures.rs  main.rs  net.rs  slint_plat.rs  web.rs
ui/: appwindow.slint  index.html
